<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    tools:context="edu.cofc.stockquotes_delacruz.MainActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prompt_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/prompt"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/prompt_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textCapCharacters" />
    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/symbol_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol" />

            <TextView
                android:id="@+id/symbol_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark"
                android:ems="10"
                android:textColor="@android:color/holo_green_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/holo_green_light"
                android:background="@android:color/background_dark"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/last_trade_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_trade_price" />

            <TextView
                android:id="@+id/last_trade_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/holo_green_light"
                android:background="@android:color/background_dark"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/last_trade_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_trade_time" />

            <TextView
                android:id="@+id/last_trade_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/holo_green_light"
                android:background="@android:color/background_dark"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/change_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change" />

            <TextView
                android:id="@+id/change_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/holo_green_light"
                android:background="@android:color/background_dark"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/week_range_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_range" />

            <TextView
                android:id="@+id/week_range_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/holo_green_light"
                android:background="@android:color/background_dark"/>

        </TableRow>

    </TableLayout>


</LinearLayout>
